--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -316,7 +316,7 @@
 </div>
 
 <div class="content" role="main">
-
+<app-tabular> </app-tabular>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
