--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+#footer{
+    direction: rtl;
+    text-align: center;
+}
+
+.arabicText {
+    direction: rtl;
+    text-align: center;
+}
